Fixed background colour/height on narrow screens

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ li {
 	background-color: #21466A;
 	color: #EBEEF2;
 	max-width: 980px;
+	min-height: 100vh;
 	margin: auto;
 	padding: 0 2em;
 	display: flex;
